Fix badge alignment if theres only one badge

--- a/static-src/scss/core/_badges.scss
+++ b/static-src/scss/core/_badges.scss
@@ -9,4 +9,8 @@
     border: 1px solid $color-positive;
     color: $color-positive;
     display: inline-block;
+
+    &:last-child {
+        margin-right: 0;
+    }
 }
